--- a/hapi.application.yml
+++ b/hapi.application.yml
@@ -1,10 +1,18 @@
+server:
+  max-http-request-header-size: 64KB
 spring:
-  datasource:
-    url: 'host.docker.internal:5432/hapi'
-    username: postgres
-    password: admin
-    driverClassName: org.postgresql.Driver
-  jpa:
-    properties:
-      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgresDialect
-      hibernate.search.enabled: false
+  ai:
+    mcp:
+      server:
+        enabled: true
+  main:
+    banner-mode: off
+hapi:
+  fhir:
+    fhir_version: R4
+    tester:
+      home:
+        name: Local Tester
+        server_address: 'http://localhost:8080/fhir'
+        refuse_to_fetch_third_party_urls: false
+        fhir_version: R4
